test/bad/modules/use03.px

use random hiding _something
